// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountDetails renders address display name without error 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      numberOfLines={1}
      style={
        {
          "color": {
            "dynamic": {
              "dark": "#FFFFFF",
              "light": "#131313",
            },
          },
          "flexShrink": 1,
          "fontFamily": "Basel Grotesk",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20.8,
        }
      }
      suppressHighlighting={true}
    >
      0x82D56A352367453f74FC0dC7B071b311da373Fa6
    </Text>
  </View>,
  <div
    style={
      {
        "display": "contents",
      }
    }
  />,
]
`;

exports[`AccountDetails renders ens display name without error 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      numberOfLines={1}
      style={
        {
          "color": {
            "dynamic": {
              "dark": "#FFFFFF",
              "light": "#131313",
            },
          },
          "flexShrink": 1,
          "fontFamily": "Basel Grotesk",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20.8,
        }
      }
      suppressHighlighting={true}
    >
      vitalik.eth
    </Text>
  </View>,
  <div
    style={
      {
        "display": "contents",
      }
    }
  />,
]
`;

exports[`AccountDetails renders local display name without error 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      numberOfLines={1}
      style={
        {
          "color": {
            "dynamic": {
              "dark": "#FFFFFF",
              "light": "#131313",
            },
          },
          "flexShrink": 1,
          "fontFamily": "Basel Grotesk",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20.8,
        }
      }
      suppressHighlighting={true}
    >
      Wallet 1
    </Text>
  </View>,
  <div
    style={
      {
        "display": "contents",
      }
    }
  />,
]
`;

exports[`AccountDetails renders unitag without error 1`] = `
[
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Text
      allowFontScaling={false}
      maxFontSizeMultiplier={1.4}
      numberOfLines={1}
      style={
        {
          "color": {
            "dynamic": {
              "dark": "#FFFFFF",
              "light": "#131313",
            },
          },
          "flexShrink": 1,
          "fontFamily": "Basel Grotesk",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20.8,
        }
      }
      suppressHighlighting={true}
    >
      luni
    </Text>
    <View
      style={
        {
          "bottom": 2,
          "display": "inline",
          "flexDirection": "column",
          "transform": [
            {
              "translateY": 1,
            },
          ],
        }
      }
    />
  </View>,
  <div
    style={
      {
        "display": "contents",
      }
    }
  />,
]
`;
